<resources>
    <string name="app_name">KeyboardShop</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Test Profile Name</string>
    <string name="email">test@email.com</string>
    <string name="wishlist">Wishlist</string>
    <string name="order_list">Order List</string>
    <string name="item_name">Item Name</string>
    <string name="discount">Discount:</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="search_items">Search Items</string>
    <string name="rembember_me">Remember me</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="plus">+</string>
    <string name="_0">$ 0</string>
    <string name="minus">-</string>
    <string name="check_out">Check Out</string>
    <string name="my_cart">My Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="_0_00">$0.00</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="price">Price:</string>
    <string name="in_stock">In stock</string>
    <string name="title">title</string>
    <string name="textview">TextView</string>
    <string name="recieved">Recieved</string>
    <string name="add_to_wishlist_button">Add to wishlist button</string>
    <string name="keyboard_image">keyboard image</string>
    <string name="add_to_cart_button">Add to cart button</string>
</resources>