<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/shoppingItem"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/itemNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/shoppingItem"
        android:text="@string/item_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/priceNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemNameTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="7dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/itemPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemNameTextView"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/shoppingItem"
        android:text="@string/price" />

    <TextView
        android:id="@+id/itemDiscountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemPriceTextView"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/shoppingItem"
        android:text="@string/discount" />

    <TextView
        android:id="@+id/discountNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priceNumberTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/inStockTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemDiscountTextView"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/shoppingItem"
        android:text="@string/in_stock" />

    <TextView
        android:id="@+id/inStockNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/discountNumber"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:text="TextView" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@android:style/Widget.DeviceDefault.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inStockTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="26dp"
        android:layout_toEndOf="@+id/shoppingItem"
        android:indeterminate="false"
        android:isIndicator="true"
        android:numStars="4"
        android:progressTint="#ffc106"
        android:rating="5"
        android:stepSize="0.1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_below="@+id/ratingBar"
        android:layout_alignBottom="@+id/shoppingItem"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@+id/shoppingItem"
        app:srcCompat="@drawable/heart" />
</RelativeLayout>

