<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <ImageView
        android:id="@+id/profilePortraitImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/catpicture"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/profilePortraitImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@id/nameTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/orderListLabelTextView"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/order_list"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orderListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/orderListLabelTextView"
        android:layout_marginTop="8dp" >
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/bottomImageViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/shopImageView"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            tools:srcCompat="@drawable/hsop" />

        <ImageView
            android:id="@+id/cartImageView"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            tools:srcCompat="@drawable/cart" />

        <ImageView
            android:id="@+id/wishlistImageView"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            tools:srcCompat="@drawable/whishlist" />

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            tools:srcCompat="@drawable/profile" />
    </LinearLayout>
</RelativeLayout>
